--- a/.github/workflows/prt.yaml
+++ b/.github/workflows/prt.yaml
@@ -5,7 +5,7 @@ on: pull_request_target
 jobs:
   testjob:
     permissions:
-      contents: read
+      contents: write
     runs-on: ubuntu-latest
     name: pull request target test job
     steps:
